--- a/package.json
+++ b/package.json
@@ -5,6 +5,27 @@
     "hardhat": "^2.12.6"
   },
   "dependencies": {
-    "@zondax/filecoin-solidity": "^0.4.0-beta.1"
-  }
+    "@openzeppelin/contracts": "^4.8.1",
+    "@zondax/filecoin-solidity": "^0.4.0-beta.1",
+    "solc": "^0.8.18"
+  },
+  "description": "This project demonstrates a basic Hardhat use case. It comes with a sample contract, a test for that contract, and a script that deploys that contract.",
+  "version": "1.0.0",
+  "main": "index.js",
+  "directories": {
+    "test": "test"
+  },
+  "scripts": {
+    "test": "mocha"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jingxuan98/PeaceFeb-FVMHack-Hardhat.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/jingxuan98/PeaceFeb-FVMHack-Hardhat/issues"
+  },
+  "homepage": "https://github.com/jingxuan98/PeaceFeb-FVMHack-Hardhat#readme"
 }
